# drogo-race-car-simulation

./: README.md
racecar_control/: CMakeLists.txt
racecar_control/launch/: gazebo_sim_joy.launch  gazebo_sim_kb.launch  racecar_control_lucky.launch  racecar_control_nav.launch  teleop.launch
racecar_control/scripts/: keyboard_teleop.py  servo_commands.py
racecar_control/src/: lucky_joy_command.cpp  lucky_nav_command.cpp
racecar_description/urdf/: macros.xacro  racecar.gazebo
racecar_gazebo/: CMakeLists.txt  \
racecar_gazebo/launch/: amcl.launch  aslam_vector_follower.launch  drogo_sim.launch  gmapping.launch  icp.launch  ppc.launch
racecar_gazebo/launch/bag/: bag.launch  bag_angle_score_nav.launch  bag_slow_curve.launch  bag_vector_follower.launch
racecar_gazebo/map/: map.pgm  map.yaml  map_modify.pgm  slow.pgm  slow.yaml
racecar_gazebo/scripts/: display_3D_visualization.py  gazebo_odometry_lucky.py  keyboard_teleop.py
racecar_gazebo/src/: fake_odom.cpp  odomToImu.cpp
